Updated pom.xml and test classes to modern Java